--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -34,6 +34,7 @@
 
 .nav-container.is-active {
   visibility: visible;
+  height: 100% !important;
 }
 
 .nav {
